# QGIS

./: .gitignore  CMakeLists.txt
src/auth/oauth2/: qgsauthoauth2config.cpp  qgsauthoauth2config.h  qgsauthoauth2edit.cpp  qgsauthoauth2edit.h  qgsauthoauth2edit.ui  qgso2.cpp
src/gui/: qgsnewhttpconnection.cpp  qgsnewhttpconnection.h
src/providers/: CMakeLists.txt
src/providers/common/: qgsjwe.cpp  qgsjwe.h  qgsjws.cpp  qgsjws.h  qgsstanag4778provideroptions.h
src/providers/stanag4778/: CMakeLists.txt  qgsstanag4778jsonfeatureiterator.cpp  qgsstanag4778jsonfeatureiterator.h  qgsstanag4778jsonprovider.cpp  qgsstanag4778jsonprovider.h
src/providers/wfs/: CMakeLists.txt  qgsauthorizationsettings.h  qgsbasenetworkrequest.cpp  qgsbasenetworkrequest.h  qgsoapifapirequest.cpp  qgsoapifapirequest.h  qgsoapifcollection.cpp  qgsoapifcollection.h  qgsoapifitemsrequest.cpp  qgsoapifitemsrequest.h  qgsoapifjws.cpp  qgsoapifjws.h  qgsoapifprovider.cpp  qgsoapifprovider.h  qgswfsconnection.cpp  qgswfsconnection.h  qgswfsconstants.cpp  qgswfsconstants.h  qgswfsdatasourceuri.cpp  qgswfsdatasourceuri.h  qgswfsnewconnection.cpp  qgswfsprovider.cpp  qgswfsprovider.h
src/ui/: qgsnewhttpconnectionbase.ui
